--- a/메모.html
+++ b/메모.html
@@ -1,3 +1,5 @@
+<!--
+
 ============html=================
 
 초기에는 군사목적으로 발명되었으나
@@ -51,7 +53,7 @@ inline tag 옆으로 움직임
 <div> - 블록태그로써 제시
 <span> - 인라인태그로써 제시
 
-<pre> <!-- 적는 그대로~ 나오게함(공백 등 포함) -->
+<pre>  적는 그대로~ 나오게함(공백 등 포함)
 
 <b> 두껍게
 <strong> 두껍게
@@ -69,7 +71,6 @@ img = 이미지, src = 소스
 5.align="left|right" (표준속성이지만 사용 자제만 권고하고 있음)
 6.border="경계선의 두께"
 >웹표준에서는 보더를 작성하되, 0으로 초기화할 것을 권장.
--->
 
 
 -----------table태그----------------
@@ -79,8 +80,110 @@ html의 꽃이라고 불리었던 태그, 지금은 아님
 상대경로 = 내 위치를 기준으로 경로를 잡음
 절대경로 = 절대적인 자원의 위치
 
-
-
 --------------------------------------
+
+drop box
+
+===============Css===============
+기본문법
+
+선택자{
+	속성:속성값;
+	속성n:속성값n; - 즉 계속적으로 추가 할 수 있음
+}
+
+3가지의 적용방법
+
+1.엠비디드 방법 - 헤드영역에서 css를 작성, 해당 페이지에서만 적용
+2.익스터널 방법 - 반복적으로 사용하는 css를 별도의 파일로 분류하여 필요할 때 가져다 쓰는 것
+3.인라인 방법 - 적용하고자 하는 태그에 직접 기입하여 사용하는 방식(웹표준에 의거 권장하는 방식은 아님)
+
+3가지의 선언방법
+
+1.태그선택자 - 태그명을 직접 지정하고 있는 태그선택자
+2.클래스선택자 - 클래스명을 이용하는 선택자
+3.아이디선택자 - 특정 대상자 하나만을 적용하기 위해 사용하는 선택자 
+
+
+border 대속성 
+
+-border 세속성 (대속성 이름에 -가 붙어 있음)
+
+
+margin
+
+padding
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
