0721 첫번째 커밋 파일 포함했어요

--- a/220720_chuing_signup.html
+++ b/220720_chuing_signup.html
@@ -62,21 +62,68 @@
 	</table>
 	<table class="firstTable">
 		<tr>
-			<td>[필독]가입시유의사항[클릭]</td>
+			<td><font color="white">[필독]가입시유의사항[클릭]</font></td>
 		</tr>
 	</table>
 	<table class="table">
 		<tr>
-			<td rowspan="2">ID</td>
-			<td><input type="text"></td>
-			<td><input type="button" value="Check ID"></td>
+			<td rowspan="2"><b>ID</b></td>
+			<td><input type="text">
+				<input type="button" value="Check ID"></td>
 		</tr>
 		<tr>
 			<td>(영문, 숫자로만 아이디를 작성하세요)</td>
 		</tr>
 	</table>
-	
+<hr>
+	<table class="table">
+		<tr>
+			<td><b>암호</b></td>
+			<td><input type="password"></td>
+			<td>확인:<input type="password"></td>
+		</tr>
+	</table>
+<hr>
+	<table class="table">
+		<tr>
+			<td rowspan="4"><b>E=mail</b></td>
+			<td>
+				<input type="text">
+				<input type="button" value="인증코드발송">
+				<input type="checkbox" checked>공개  
+			</td>
+		</tr>
+		<tr>
+			<td>(네이버/구글 이메일로만 가입이 가능합니다.)</td>
+		</tr>
+		<tr>
+			<td>(이메일이 도착하지 않을 경우 스패함을 확인해 보세요.)</td>
+		</tr>
+		<tr>
+			<td>(이메일을 잘못적은 경우 새로고침 후 다시 시도하세요.)</td>
+		</tr>
+	<table class="table">
+<hr>
+	<table class="table">
+		<tr>
+			<td><B>인증코드</b></td>
+			<td><input type="text">(메일로 전송된 코드를 입력하세요.)	</td>
+		</tr>
+	</table>
 	<hr>
+	<table class="table">
+		<tr>
+			<td><b>정보공개</b></td>
+			<td><input type="checkbox" checked>정보 공개</td>
+		</tr>
+	</table>
+	<table align="right">
+		<tr>
+			<td><input type="button" value="회원가입"></td>
+			<td><input type="button" value="닫기"></td>
+		</tr>
+	</table>
+
 
   
  </body>
