--- a/메모.html
+++ b/메모.html
@@ -96,7 +96,7 @@ drop box
 
 1.엠비디드 방법 - 헤드영역에서 css를 작성, 해당 페이지에서만 적용
 2.익스터널 방법 - 반복적으로 사용하는 css를 별도의 파일로 분류하여 필요할 때 가져다 쓰는 것
-3.인라인 방법 - 적용하고자 하는 태그에 직접 기입하여 사용하는 방식(웹표준에 의거 권장하는 방식은 아님)
+3.인라인 방법 - 적용하고자 하는 태그에 직접 기입하여 사용하는 방식 (웹표준에 의거 권장하는 방식은 아님)
 
 3가지의 선언방법
 
@@ -104,15 +104,22 @@ drop box
 2.클래스선택자 - 클래스명을 이용하는 선택자
 3.아이디선택자 - 특정 대상자 하나만을 적용하기 위해 사용하는 선택자 
 
-
 border 대속성 
 
 -border 세속성 (대속성 이름에 -가 붙어 있음)
 
-
 margin
 
 padding
+
+07/21
+
+==========git==========
+로컬에서는 내가 주 기둥이므로 잘못된 역사를 파기할 수 있지만
+온라인에서는 내가 나뭇가지이므로 덮어쓰기 개념으로 간다 .. 무슨말이여 이게;
+
+깃하고 깃허브는 아예 다른거임
+깃허브는 클라우드 제공해주는 별도의 업체임;
 
 
 
