20220721 자바스크립트 찍먹 커밋

--- a/220720_chuing_signup.html
+++ b/220720_chuing_signup.html
@@ -14,7 +14,7 @@
   }
 
   .firstTable{
-		margin:0px auto;
+		
 		background-color:red;
 		width:100%;
   }
@@ -30,7 +30,7 @@
   }
 
   .table{
-	margin:0px auto;
+	text-align:"right"
   }
 
 
@@ -75,7 +75,7 @@
 			<td>(영문, 숫자로만 아이디를 작성하세요)</td>
 		</tr>
 	</table>
-<hr>
+
 	<table class="table">
 		<tr>
 			<td><b>암호</b></td>
@@ -83,7 +83,7 @@
 			<td>확인:<input type="password"></td>
 		</tr>
 	</table>
-<hr>
+
 	<table class="table">
 		<tr>
 			<td rowspan="4"><b>E=mail</b></td>
@@ -103,7 +103,7 @@
 			<td>(이메일을 잘못적은 경우 새로고침 후 다시 시도하세요.)</td>
 		</tr>
 	<table class="table">
-<hr>
+
 	<table class="table">
 		<tr>
 			<td><B>인증코드</b></td>
