--- a/메모.html
+++ b/메모.html
@@ -72,16 +72,6 @@ img = 이미지, src = 소스
 6.border="경계선의 두께"
 >웹표준에서는 보더를 작성하되, 0으로 초기화할 것을 권장.
 
-
------------table태그----------------
-html의 꽃이라고 불리었던 태그, 지금은 아님
-
-
-상대경로 = 내 위치를 기준으로 경로를 잡음
-절대경로 = 절대적인 자원의 위치
-
---------------------------------------
-
 drop box
 
 ===============Css===============
@@ -92,13 +82,13 @@ drop box
 	속성n:속성값n; - 즉 계속적으로 추가 할 수 있음
 }
 
-3가지의 적용방법
+적용방법 3가지
 
-1.엠비디드 방법 - 헤드영역에서 css를 작성, 해당 페이지에서만 적용
+1.엠비디드 방법 - 해당 페이지에서만 적용, 헤드영역에서 css를 작성
 2.익스터널 방법 - 반복적으로 사용하는 css를 별도의 파일로 분류하여 필요할 때 가져다 쓰는 것
-3.인라인 방법 - 적용하고자 하는 태그에 직접 기입하여 사용하는 방식 (웹표준에 의거 권장하는 방식은 아님)
+3.인라인 방법 - 적용하고자 하는 태그에 직접 기입하여 사용하는 방식 (웹표준 권고안에 의거 권장하는 방식은 아님)
 
-3가지의 선언방법
+선언방법 3가지
 
 1.태그선택자 - 태그명을 직접 지정하고 있는 태그선택자
 2.클래스선택자 - 클래스명을 이용하는 선택자
@@ -114,7 +104,7 @@ padding
 
 07/21
 
-==========git==========
+================git====================
 로컬에서는 내가 주 기둥이므로 잘못된 역사를 파기할 수 있지만
 온라인에서는 내가 나뭇가지이므로 덮어쓰기 개념으로 간다 .. 무슨말이여 이게;
 
@@ -122,8 +112,78 @@ padding
 깃허브는 클라우드 제공해주는 별도의 업체임;
 
 
+============javascript=================
+
+gwbasic - 고전 제일 대표적인 스크립트 언어
+
+java가 가진 객체지향을 활용하면서
+script 언어로 만듬
+
+HTML, CSS = 정적인 화면
 
 
+웹표준
+어떤 개발자건 간에 공통된 방식으로 개발하며, 장애인 비장애인 공통된 서비스를 제공한다.
+서비스를 제공하는 사용자의 컴퓨터를 인위적으로 조작하면 안된다.
+(어플리케이션을 설치하여 활용하는 인터넷 환경이 그러한 방식이었다.)
+
+항상 모든 문제의 근원은 '설치하는 시점'
+
+악성코드 설치시 외부 원격자의 신호를 받아 어떤 행위를 실행하게됨(디도스 같은 프로그램)
+
+이러한 상황을 원천적으로 막기 위해 웹표준에서는 액티브엑스 같은 프로그램을 사용하지 않도록 권고
+
+이러한 문제로 스티브잡스 생전 사파리에서는 플래시를 지원하지 않겠다 발표
+이 후 구글 등에서도 지원하지 않겠다고 발표
+이후 어도비사에서도 플래시를 업데이트 하지 않겠다 선언
+
+플래시가 사라진 후 동적인 화면을 구현하기가 어려워짐
+
+그 행위를 대신하기 위해서 다시 부각된 언어가 자바스크립트이다.
+
+스크립트 언어 중에 단순 표현만 하는 언어가 아닌 실제 프로그램처럼 데이터를 조작하고
+알고리즘을 구성하며 비즈니스 로직을 가지고 있는 언어
+
+정적인 html화면을 조작하거나, 유효성 검사를 하거나 하는 등의 기능을 자바스크립트로 실현가능
+
+사용자가 입력한 정보들을 회수해서 데이터로 사용할 수 있음
+
+
+클라이언트 언어라 부르는 이유 - 서버가 아닌, 사용자 브라우저에 의해 번역되고 실행되는 프로그램
+
+웹프로그램 - 제한되어있는 자원을 불특성 다수가 접속하여 동시다발적으로 사용함
+
+단순 유효성 검사조차 서버에서 요청하게 되면 그 또한 리소스, 즉 자원이 되게 된다.
+이리하여 서버자원이 낭비가 많이 되므로 간단한 검사는 사용자 자원을 이용하여 처리할 수 있도록 
+로직 등을 자바스크립트에게 요청
+
+자바스크립트 또한 html을 보완하기 위한 3rd party 개념이므로
+html을 조작할 수 있음
+
+자바스크립트는 새로운 언어를 배우는 느낌으로 공부하면안되고
+자바의 객체지향적인 특징과 스크립트 언어의 특징을 가지고 있음을 인지
+내가 배웠던 자바와 자바스크립트의 비슷한 점과 다른 점을 구분하면서 배워야 한다.
+
+javasript core = 자바 스크립트가 가지고 있는 문법
+document object model(dom) = 화면에 있는 객체들의 모델, html태그를 객체적으로 바라보는 관점의 기술
+brower object model(bom) = 브라우저에서 기본적으로 제공해주는 객체
+
+document는 화면을 의미하는 객체
+window는 브라우저를 의미하는 객체
+
+최상위 객체 window 그 밑에 document
+그리고 그 밑에 html
+
+자바스크립트는 이벤트 언어라고도 불린다.
+사용자의 이벤트에 응답하기 위해 만든 언어이다.
+
+event source
+event
+event handler
+
+이벤트 소스에 이벤트 핸들러를 1:1로 선언하는게 가능
+
+자바 자바스크립트 css html 순서로 컴파일된다.
 
 
 
